--- a/less/index.less
+++ b/less/index.less
@@ -29,7 +29,7 @@ header {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: calc(~"100vh - (48px + @{double-margin})");
+  height: calc(~"100vh - (48px + @{double-margin}) - @{safari-compensation}");
 
   @media screen {
     @media (orientation: portrait) {
